plugins {
    id 'org.jetbrains.kotlin.jvm' version '1.5.30'
}

group 'org.example'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'org.jetbrains.kotlin.jvm'

sourceCompatibility = 15

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

repositories {
    mavenCentral()
}

compileKotlin {
    kotlinOptions.jvmTarget = "1.8"
}

compileTestKotlin {
    kotlinOptions.jvmTarget = "1.8"
}

dependencies {
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.5.30'
    implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
    implementation group: 'com.netflix.hystrix', name: 'hystrix-core', version: '1.5.18'


    testApi group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'
    testApi group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.7.0'
    testApi group: 'org.assertj', name: 'assertj-core', version: '3.18.1'
    testApi group: 'io.mockk', name: 'mockk', version: '1.10.3'

}

test {
    useJUnitPlatform()
}

